@startuml

title __DATABASE's Class Diagram__\n

  namespace database {
    class database.AccountManager {
        + insertUser()
        + loginValidate()
    }
  }
  

  namespace database {
    class database.DatabaseControl {
        + addNewAccount()
        {static} + checkDatabase()
        + connect()
        + loginValidate()
        + test()
    }
  }
  

  namespace database {
    class database.MysqlUser {
        - jdbcURL : String
        - name : String
        - password : String
        ~ getJdbcURL()
        ~ getName()
        ~ getPassword()
    }
  }
  

  namespace database {
    class database.User {
        - email : String
        - name : String
        - password : String
        + User()
        + getEmail()
        + getName()
        + getPassword()
        + verifyAccount()
        - setEmail()
        - setName()
        - setPassword()
    }
  }
  

  database.DatabaseControl o-- database.AccountManager : accountManager
  database.DatabaseControl o-- database.MysqlUser : mysqlUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
